--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.1-M02'
-    ext.dokka_version = '0.9.9'
+    ext.kotlin_version = '1.1.0-beta-18'
+    ext.dokka_version = '0.9.10'
 
     repositories {
         mavenCentral()
@@ -14,29 +14,27 @@ buildscript {
 }
 
 plugins {
-    id 'com.github.hierynomus.license' version '0.11.0'
-    id 'com.github.johnrengelman.shadow' version '1.2.3'
+    id 'com.github.hierynomus.license' version '0.13.1'
+    id 'com.github.johnrengelman.shadow' version '1.2.4'
 }
 
 group 'com.github.jonathanxd'
-version '1.0-SNAPSHOT'
+version '1.1-SNAPSHOT'
 
-allprojects {
-    // IDE
-    apply plugin: 'idea'
-    apply plugin: 'eclipse'
+// IDE
+apply plugin: 'idea'
+apply plugin: 'eclipse'
 
-    // Programming Language
-    apply plugin: 'kotlin'
-    apply plugin: 'org.jetbrains.dokka'
-    apply plugin: 'java'
+// Programming Language
+apply plugin: 'kotlin'
+apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'java'
 
-    // License
-    apply plugin: 'license'
+// License
+apply plugin: 'license'
 
-    // Shade
-    apply plugin: 'com.github.johnrengelman.shadow'
-}
+// Shade
+apply plugin: 'com.github.johnrengelman.shadow'
 
 sourceCompatibility = 1.8
 
@@ -49,10 +47,11 @@ repositories {
 dependencies {
     // Kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // Utilities
-    compile 'com.github.JonathanxD:CodeAPI:2.1.2'
-    compile 'com.github.JonathanxD:JwIUtils:3.1.1'
+    compile 'com.github.JonathanxD:CodeAPI-BytecodeWriter:3.0'
+    compile 'com.github.JonathanxD:JwIUtils:3.5.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
