Removed BytecodeWriter dependency (shaded jar size decreased)

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ plugins {
 }
 
 group 'com.github.jonathanxd'
-version '1.1-SNAPSHOT'
+version '1.2-SNAPSHOT'
 
 // IDE
 apply plugin: 'idea'
@@ -50,7 +50,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // Utilities
-    compile 'com.github.JonathanxD:CodeAPI-BytecodeWriter:3.0'
+    compile 'com.github.JonathanxD:CodeAPI:3.0.2'
     compile 'com.github.JonathanxD:JwIUtils:3.5.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
