Updated Kotlin to 1.1.0 and CodeAPI to 3.2.0-a

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 buildscript {
-    ext.kotlin_version = '1.1.0-rc-91'
+    ext.kotlin_version = '1.1.0'
     ext.dokka_version = '0.9.10'
 
     repositories {
         mavenCentral()
-        maven { url "http://dl.bintray.com/kotlin/kotlin-eap-1.1" }
     }
 
     dependencies {
@@ -19,7 +18,7 @@ plugins {
 }
 
 group 'com.github.jonathanxd'
-version '1.2.2-SNAPSHOT'
+version '1.2.2-a-SNAPSHOT'
 
 // IDE
 apply plugin: 'idea'
@@ -41,7 +40,6 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
-    maven { url "http://dl.bintray.com/kotlin/kotlin-eap-1.1" }
 }
 
 dependencies {
@@ -50,8 +48,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // Utilities
-    compile 'com.github.JonathanxD:CodeAPI:3.1.0'
-    compile 'com.github.JonathanxD:JwIUtils:3.5.2'
+    compile 'com.github.JonathanxD:CodeAPI:3.2.0-a'
+    compile 'com.github.JonathanxD:JwIUtils:3.6.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
